Test/error/test-6.cmm
int main()
{
    if (a ==)
        print(x);
    else
        print(y);
}
